[package]
name = "redstonium"
version = "0.1.0"
edition = "2024"
description = "A Minecraft launcher built with Rust and GPUI"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
open = "5"
tiny_http = "0.12"
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = ">=21.0.0, <21.1.0"
